--- a/spotify_scrolly_side/style.css
+++ b/spotify_scrolly_side/style.css
@@ -47,7 +47,7 @@ nav {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  background: #000000;
+  background: #302f2f;
   padding: 1rem;
   padding-right: 5rem;
   -ms-flex-wrap: wrap;
