--- a/spotify_scrolly_side/style.css
+++ b/spotify_scrolly_side/style.css
@@ -120,3 +120,8 @@ nav {
     margin-left: 2rem;
   }
 }
+
+.rap { color: #2e75f0; font-weight: bold; }
+.edm { color: #48d1e0; font-weight: bold;}
+.pop { color: #fcc838; font-weight: bold;}
+.latino { color: #f04152; font-weight: bold;}
