--- a/spotify_scrolly_side/style.css
+++ b/spotify_scrolly_side/style.css
@@ -124,4 +124,4 @@ nav {
 .rap { color: #2e75f0; font-weight: bold; }
 .edm { color: #48d1e0; font-weight: bold;}
 .pop { color: #fcc838; font-weight: bold;}
-.latino { color: #f04152; font-weight: bold;}
+.latino { color: #8c62f5; font-weight: bold;}
